fix footer icons not showing

--- a/style.scss
+++ b/style.scss
@@ -128,28 +128,30 @@ body {
     transform-origin: 50% 0%;
     transform: rotateX(-90deg) translateZ(0);
     transition-duration: .3s;
-    transition-properties: background transform;
   }
   
-  li {
-    display: inline-block;
-    vertical-align: middle;
-    width: 33%;
-    list-style: none;
-    text-align: center;
-  }
-  
-  li a {
-    display: block;
-    width: 100%;
-    height: 1em;
-    padding: .5em 0;
-    color: #222;
-    transition-duration: .5s;
-    transition-property: background;
-    
-    &:hover {
-      background: #EEE;
+  ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    li {
+      list-style: none;
+      a {
+        color: #222;
+        padding: .5em 0;
+        height: 1em;
+        display: block;
+        transition-duration: .5s;
+        transition-property: background; 
+        &:hover {
+          background: #EEE;
+        }
+      }
     }
   }
 }
+
+
+
+  
+  
